--- a/burial.html
+++ b/burial.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Окажем помощь в организации всего процесса захоронения. Доступные цены на ритуальные услуги в Минске и Минской области.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style-1.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Услуги захоронения в Минске</title>
 </head>
 <body>
@@ -142,8 +142,8 @@
                             <div class="prais-list__sub-title">МИНИМАЛЬНЫЙ ПАКЕТ НЕОБХОДИМЫХ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
-                            <div class="prais-list__byn">690<span> BYN</span></div>
-                            <div class="prais-list__byn-sub">полностью покрывает пособие на погребение</div>
+                            <div class="prais-list__byn">780<span> BYN</span></div>
+                            <div class="prais-list__byn-sub">полностью покрывается пособием на погребение</div>
                         </div>
                         <ul class="prais-list__list">
                             <li class="prais-list__line"><span>Гроб социальный;</span></li>
@@ -163,12 +163,12 @@
                 <div class="prais__item">
                     <div class="prais-list">
                         <div class="prais-list__heder">
-                            <div class="prais-list__title">CLASSIC PLUS</div>
-                            <div class="prais-list__sub-title">ВЕСЬ НЕОБХОДИМЫХ ПЕРЕЧЕНЬ УСЛУГ</div>
+                            <div class="prais-list__title">STANDART</div>
+                            <div class="prais-list__sub-title">ПЕРЕЧЕНЬ НЕОБХОДИМЫХ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
-                            <div class="prais-list__byn">950<span> BYN</span></div>
-                            <div class="prais-list__byn-sub">полностью покрывает пособие на погребение</div>
+                            <div class="prais-list__byn">1050<span> BYN</span></div>
+                            <div class="prais-list__byn-sub">полностью покрывается пособием на погребение</div>
                         </div>
                         <ul class="prais-list__list">
                             <li class="prais-list__line"><span>Гроб социальный;</span></li>
@@ -188,12 +188,12 @@
                 <div class="prais__item">
                     <div class="prais-list">
                         <div class="prais-list__heder">
-                            <div class="prais-list__title">STANDART</div>
-                            <div class="prais-list__sub-title">МИНИМАЛЬНЫЙ ПАКЕТ НЕОБХОДИМЫХ УСЛУГ</div>
+                            <div class="prais-list__title">CLASSIC PLUS</div>
+                            <div class="prais-list__sub-title">ОПТИМАЛЬНЫЙ НАБОР НЕОБХОДИМЫХ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
-                            <div class="prais-list__byn">1200<span> BYN</span></div>
-                            <div class="prais-list__byn-sub">полностью покрывает пособие на погребение</div>
+                            <div class="prais-list__byn">1350<span> BYN</span></div>
+                            <div class="prais-list__byn-sub">полностью покрывается пособием на погребение</div>
                         </div>
                         <ul class="prais-list__list  __padding-3">
                             <li class="prais-list__line"><span>Гроб обитый тканью;</span></li>
@@ -214,7 +214,7 @@
                     </div>
                 </div>
             </div>
-        </div>            
+        </div>             
 
         </main>
 
