--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="➤ Весь спектр похоронных услуг: захоронение, кремация, оформление места захоронения, копка могилы, услуги санитара-патологоанатома, подготовка тела к погребению.">
     <meta name="theme-color" content="#ba9f5a">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style-1.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Ритуальные услуги в Минске - бюро похоронных услуг</title>
 </head>
 <body>
@@ -130,7 +130,7 @@
                         </div>
                         <div class="cart__line"></div>
                         <div class="cart__title">ЧТО ДЕЛАТЬ КОГДА УМЕР БЛИЗКИЙ ?</div>
-                        <div class="cart__sub-title">Когда кто-то умирает, есть ряд вешей которые нужно сделать в первую очередь.</div>
+                        <div class="cart__sub-title">Когда кто-то умирает, есть ряд вещей которые нужно сделать в первую очередь.</div>
                         <a class="cart__botton" href="if-died.html">подробнее</a>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                         </div>
                         <div class="cart__line"></div>
                         <div class="cart__title">КОНТАКТЫ РИТУАЛЬНЫХ АГЕНТОВ</div>
-                        <div class="cart__sub-title">Телефонные номера и иные способы связи, для незамедлительной помощи в тяжёлый момент.</div>
+                        <div class="cart__sub-title">Телефонные номера и иные способы связи, для получения незамедлительной помощи в тяжёлый момент.</div>
                         <a class="cart__botton" href="contacts.html">подробнее</a>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
 
                 <div class="age-17__item-3">
                     <div class="age-17__title-3">Кратко о Нас</div>
-                    <div class="age-17__sub-title-3">МЫ ПРЕДОСТАВЛЯЕМ ЛУЧШИЕ УСЛУГИ ПО ПОХОРОНАМ И КРЕМАЦИИ С 2005 ГОДА.</div>
+                    <div class="age-17__sub-title-3">МЫ ПРЕДОСТАВЛЯЕМ УСЛУГИ ПО ПОХОРОНАМ И КРЕМАЦИИ С 2005 ГОДА.</div>
                     <div class="age-17__line"></div>
                     <div class="age-17__text-3">Вы не остаетесь с горем один на один, мы многие годы помогаем людям в трудные минуты их жизни, круглосуточная помошь и консультация по вопросам кремации и захоронения.</div>
                     
@@ -259,8 +259,8 @@
                             <div class="prais-list__sub-title">МИНИМАЛЬНЫЙ ПАКЕТ НЕОБХОДИМЫХ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
-                            <div class="prais-list__byn">690<span> BYN</span></div>
-                            <div class="prais-list__byn-sub">полностью покрывает пособие на погребение</div>
+                            <div class="prais-list__byn">780<span> BYN</span></div>
+                            <div class="prais-list__byn-sub">полностью покрывается пособием на погребение</div>
                         </div>
                         <ul class="prais-list__list">
                             <li class="prais-list__line"><span>Гроб социальный;</span></li>
@@ -280,12 +280,12 @@
                 <div class="prais__item">
                     <div class="prais-list">
                         <div class="prais-list__heder">
-                            <div class="prais-list__title">CLASSIC PLUS</div>
-                            <div class="prais-list__sub-title">ВЕСЬ НЕОБХОДИМЫХ ПЕРЕЧЕНЬ УСЛУГ</div>
+                            <div class="prais-list__title">STANDART</div>
+                            <div class="prais-list__sub-title">ПЕРЕЧЕНЬ НЕОБХОДИМЫХ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
-                            <div class="prais-list__byn">950<span> BYN</span></div>
-                            <div class="prais-list__byn-sub">полностью покрывает пособие на погребение</div>
+                            <div class="prais-list__byn">1050<span> BYN</span></div>
+                            <div class="prais-list__byn-sub">полностью покрывается пособием на погребение</div>
                         </div>
                         <ul class="prais-list__list">
                             <li class="prais-list__line"><span>Гроб социальный;</span></li>
@@ -305,12 +305,12 @@
                 <div class="prais__item">
                     <div class="prais-list">
                         <div class="prais-list__heder">
-                            <div class="prais-list__title">STANDART</div>
-                            <div class="prais-list__sub-title">МИНИМАЛЬНЫЙ ПАКЕТ НЕОБХОДИМЫХ УСЛУГ</div>
+                            <div class="prais-list__title">CLASSIC PLUS</div>
+                            <div class="prais-list__sub-title">ОПТИМАЛЬНЫЙ НАБОР НЕОБХОДИМЫХ УСЛУГ</div>
                         </div>
                         <div class="prais-list__pay">
-                            <div class="prais-list__byn">1200<span> BYN</span></div>
-                            <div class="prais-list__byn-sub">полностью покрывает пособие на погребение</div>
+                            <div class="prais-list__byn">1350<span> BYN</span></div>
+                            <div class="prais-list__byn-sub">полностью покрывается пособием на погребение</div>
                         </div>
                         <ul class="prais-list__list  __padding-3">
                             <li class="prais-list__line"><span>Гроб обитый тканью;</span></li>
