--- a/shop-crosses.html
+++ b/shop-crosses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Оформление заказа креста ☦ осуществляется круглосуточно. Сделать это можно по ☎ телефону или оставив заявку на сайте.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style-1.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Крест для похорон купить в Минске: цена католического православного</title>
 </head>
 <body>
