--- a/calc.html
+++ b/calc.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="🚚 Оказываем доставку товаров с нашего магазина c 08:00 до 20:00 без выходных. Доставка по Минску 7 р. При заказе более 150 р. – доставка бесплатно.">
+    <meta name="description" content="➤ Весь спектр похоронных услуг: захоронение, кремация, оформление места захоронения, копка могилы, услуги санитара-патологоанатома, подготовка тела к погребению.">
+    <meta name="theme-color" content="#ba9f5a">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Доставка и оплата</title>
+    <title>Ритуальные услуги в Минске - бюро похоронных услуг</title>
 </head>
 <body>
     <div class="wrapper">
-
         <!--= heder -->
         <header class="header">
             <div class="header__up">
                 <div class="header__logo">
-                    <img class="header__logo-img" src="img/home/logo-new.png" alt="логотип сайта похороны в минске">
+                    <img class="header__logo-img" src="img/home/logo-new.png" alt="логотип сайта похороны в минске" width="100" height="100">
                 </div>
                 <h1 class="header__title"><span>Ритуальные услуги в Минске</span></h1>
                 <a href="tel:+375447695139" class="header__tel">тел.+375 44 769 51 39</a>
@@ -102,10 +102,9 @@
 
         <!--= main -->
         <main class="main">
-
             <!-- шапка -->
             <div class="heder-page heder-page_margin">
-                <h1 class="heder-page__title">Доставка и оплата</h1>
+                <h1 class="heder-page__title">Калькулятор</h1>
                 <div class="heder-page__img">
                     <picture>
                         <source srcset="img/home/grob-500.webp" type="image/webp" media="(max-width: 750px)">
@@ -115,32 +114,66 @@
                     </picture>
                 </div>
             </div>
-
-            <!-- title: -->
-            <div class="text-title container">
-                <div class="text-title_margin">Способы оплаты</div>
-            </div>
-
             <!-- текст: -->
             <div class="text-page container">
-                <div class="text-page_margin">Оплата производится непосредственно при получении курьеру, наличными.</div>
+                <div class="text-page_margin">Погребение близкого или родственника предполагает достаточно солидные расходы, к которым необходимо быть готовыми. soboleznuem.by не только оказывает ритуальные услуги по государственным ценам, но и предоставляет своим клиентам возможность оценить и правильно спланировать предстоящие траты непосредственно на сайте похоронного агентства.</div>
             </div>
-
             <!-- title: -->
             <div class="text-title container">
-                <div class="text-title_margin">Условия доставки</div>
+                <div class="text-title_margin">Для расчета стоимости сделайте свой выбор:</div>
             </div>
 
-            <!-- текст: -->
-            <div class="text-page container">
-                <div class="text-page_margin">
-                    <p>Доставка по городу Минску осуществляется к подъезду c 08:00 до 20:00 без выходных.</p>
-                    <p>Стоимость доставки по Минску  7 р.</p>
-                    <p>Стоимость доставки за пределами МКАД  7р.+ 50 копеек за км.</p>
-                    <p>При заказе на сумму более 150 р. — доставка бесплатно.</p>
+            <div class="calc">
+
+                <form class="form" name="calc" action="#" method="get">
+                    <!--= Гробы -->
+                    <div class="title-coffin">Ваш выбор гроба:</div>
+                    <div class="coffin">
+                        <div class="coffin__tim">
+                            <img class="coffin__img-tim" src="/img/__calc/coffin/coffin-icon.png" alt="#">
+                            <span class="coffin__tim-title" data-cash="0">Выбор гроба</span>
+                        </div>
+                        <div class="coffin__item">
+                            <img class="coffin__img" src="/img/__calc/coffin/1.jpg" alt="#">
+                            <div class="coffin__label" data-cash="500">Гроб лакированный</div>
+                        </div>
+                        <div class="coffin__item">
+                            <img class="coffin__img" src="/img/__calc/coffin/2.jpg" alt="#">
+                            <div class="coffin__label" data-cash="300">Гроб тканевый</div>
+                        </div>
+                        <div class="coffin__item">
+                            <img class="coffin__img" src="/img/__calc/coffin/3.jpg" alt="#">
+                            <div class="coffin__label" data-cash="100">Гроб соцыальный</div>
+                        </div>
+                    </div>
+                    <!--= Венки -->
+                    <div class="title-coffin">Ваш выбор ритуального венка:</div>
+                    <div class="wreath">
+                        <div class="wreath__tim">
+                            <img class="wreath__img-tim" src="/img/__calc/wreath/icon.png" alt="#">
+                            <span class="wreath__tim-title" data-cash="0">Выбор венка</span>
+                        </div>
+                        <div class="wreath__item">
+                            <img class="wreath__img" src="/img/__calc/wreath/1.png" alt="#">
+                            <div class="wreath__label" data-cash="500">Венок ритуальный (1.7 метра)</div>
+                        </div>
+                        <div class="wreath__item">
+                            <img class="wreath__img" src="/img/__calc/wreath/2.png" alt="#">
+                            <div class="wreath__label" data-cash="300">Венок ритуальный (1.5 метра)</div>
+                        </div>
+                        <div class="wreath__item">
+                            <img class="wreath__img" src="/img/__calc/wreath/3.png" alt="#">
+                            <div class="wreath__label" data-cash="100">Венок ритуальный (1.3 метра)</div>
+                        </div>
+                    </div>
+
+                    <div class="more">добавить еще</div>
+                    <div class="praice">Итого: 0</div>
+                </form>
+                <div class="shop-calc">
+                    <div class="shop-calc__title">Выбраные услуги и товары :</div>
                 </div>
             </div>
-        <!-- конец блок магазина -->
         </main>
 
         <!--= footer -->
@@ -168,9 +201,9 @@
             </div>
         </footer>
 
-    <!-- end wrapper -->
+    <!-- end  -->
     </div>
-
-    <script src="js/script.js"></script>
+<script src="js/calc.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
