--- a/crematorium-minsk.html
+++ b/crematorium-minsk.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Наша компания организует кремацию вашего близкого умершего на достойном уровне. Доступная цена. Все под ключ.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style-1.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Крематорий в Минске - услуги кремации на северном кладбище цена</title>
 </head>
 <body>
