--- a/place-cemetery.html
+++ b/place-cemetery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="По вопросам получения свободного места на кладбище, а также организации похорон, вы можете обратиться в нашу компанию.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style-1.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Место на кладбище в Минске - как получить, как оформить место</title>
 </head>
 <body>
