--- a/shop-clothes.html
+++ b/shop-clothes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Недорогую обувь и одежду для похорон можно купить в нашем магазине. Цена на погребальные наряды доступна каждому. Доставка по Минску!">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style-1.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Погребальная одежда, обувь для женщин и мужчин купить в Минске</title>
 </head>
 <body>
