--- a/calc.html
+++ b/calc.html
@@ -99,7 +99,6 @@
                 </nav>
             </div>
         </header>
-
         <!--= main -->
         <main class="main">
             <!-- шапка -->
@@ -131,7 +130,7 @@
                     <div class="coffin">
                         <div class="coffin__tim">
                             <img class="coffin__img-tim" src="/img/__calc/coffin/coffin-icon.png" alt="#">
-                            <span class="coffin__tim-title" data-cash="0">Выбор гроба</span>
+                            <span class="coffin__tim-title" data-all="0">Выбор гроба</span>
                         </div>
                         <div class="coffin__item">
                             <img class="coffin__img" src="/img/__calc/coffin/1.jpg" alt="#">
@@ -151,19 +150,19 @@
                     <div class="wreath">
                         <div class="wreath__tim">
                             <img class="wreath__img-tim" src="/img/__calc/wreath/icon.png" alt="#">
-                            <span class="wreath__tim-title" data-cash="0">Выбор венка</span>
+                            <span class="wreath__tim-title" data-all="0">Выбор венка</span>
                         </div>
                         <div class="wreath__item">
                             <img class="wreath__img" src="/img/__calc/wreath/1.png" alt="#">
-                            <div class="wreath__label" data-cash="500">Венок ритуальный (1.7 метра)</div>
+                            <div class="wreath__label" data-cash="70">Венок ритуальный (1.7 метра)</div>
                         </div>
                         <div class="wreath__item">
                             <img class="wreath__img" src="/img/__calc/wreath/2.png" alt="#">
-                            <div class="wreath__label" data-cash="300">Венок ритуальный (1.5 метра)</div>
+                            <div class="wreath__label" data-cash="50">Венок ритуальный (1.5 метра)</div>
                         </div>
                         <div class="wreath__item">
                             <img class="wreath__img" src="/img/__calc/wreath/3.png" alt="#">
-                            <div class="wreath__label" data-cash="100">Венок ритуальный (1.3 метра)</div>
+                            <div class="wreath__label" data-cash="30">Венок ритуальный (1.3 метра)</div>
                         </div>
                     </div>
 
