--- a/calc.html
+++ b/calc.html
@@ -127,7 +127,7 @@
                 <form class="form" name="calc" action="#" method="get">
                     <!--= Гробы -->
                     <div class="title-coffin">Ваш выбор гроба:</div>
-                    <div class="coffin">
+                    <div class="coffin" data-total="">
                         <div class="coffin__tim">
                             <img class="coffin__img-tim" src="/img/__calc/coffin/coffin-icon.png" alt="#">
                             <span class="coffin__tim-title" data-all="0">Выбор гроба</span>
@@ -169,9 +169,27 @@
                     <div class="more">добавить еще</div>
                     <div class="praice">Итого: 0</div>
                 </form>
+
                 <div class="shop-calc">
-                    <div class="shop-calc__title">Выбраные услуги и товары :</div>
+                    <div class="shop-calc__title">
+                        <span>Выбраные услуги и товары :</span>
+                    </div>
+                    <!-- <div class="shop-calc__list">
+                        <div class="shop-calc__img-box">
+                            <img src="/img/__calc/coffin/3.jpg" alt="#">
+                        </div>
+                        <div class="shop-calc__info">
+                            <div class="shop-calc__text">Гроб лакированный</div>
+                            <div class="shop-calc__cash">стоимость: 420 byn</div>
+                        </div>
+                        <div class="shop-calc__delete">
+                            <img src="/img/__calc/delete_icon.png" alt="#">
+                        </div>
+                    </div> -->
+
+                    
                 </div>
+
             </div>
         </main>
 
