--- a/calc.html
+++ b/calc.html
@@ -125,12 +125,13 @@
             <div class="calc">
 
                 <form class="form" name="calc" action="#" method="get">
+
                     <!--= Гробы -->
                     <div class="title-coffin">Ваш выбор гроба:</div>
                     <div class="coffin" data-total="">
                         <div class="coffin__tim">
-                            <img class="coffin__img-tim" src="/img/__calc/coffin/coffin-icon.png" alt="#">
-                            <span class="coffin__tim-title" data-all="0">Выбор гроба</span>
+                            <img class="coffin__img-tim" src="/img/__calc/coffin/coffin-icon.png" alt="#" data-img="/img/__calc/coffin/coffin-icon.png">
+                            <span class="coffin__tim-title" data-all="0" data-title="Выбор гроба">Выбор гроба</span>
                         </div>
                         <div class="coffin__item">
                             <img class="coffin__img" src="/img/__calc/coffin/1.jpg" alt="#">
@@ -145,12 +146,13 @@
                             <div class="coffin__label" data-cash="100">Гроб соцыальный</div>
                         </div>
                     </div>
+
                     <!--= Венки -->
                     <div class="title-coffin">Ваш выбор ритуального венка:</div>
-                    <div class="wreath">
+                    <div class="wreath" data-total="">
                         <div class="wreath__tim">
-                            <img class="wreath__img-tim" src="/img/__calc/wreath/icon.png" alt="#">
-                            <span class="wreath__tim-title" data-all="0">Выбор венка</span>
+                            <img class="wreath__img-tim" src="/img/__calc/wreath/icon.png" alt="#" data-img="/img/__calc/wreath/icon.png">
+                            <span class="wreath__tim-title" data-all="0" data-title="Выбор венка">Выбор венка</span>
                         </div>
                         <div class="wreath__item">
                             <img class="wreath__img" src="/img/__calc/wreath/1.png" alt="#">
@@ -165,8 +167,38 @@
                             <div class="wreath__label" data-cash="30">Венок ритуальный (1.3 метра)</div>
                         </div>
                     </div>
-
                     <div class="more">добавить еще</div>
+
+                    <!--= Комплект одежды -->
+                    <div class="title-coffin">Комплект одежды для усопшего:</div>
+                    <div class="dress" data-total="">
+                        <div class="dress__tim">
+                            <img class="dress__img-tim" src="/img/__calc/dress/dress-icon.png" alt="#" data-img="/img/__calc/dress/dress-icon.png">
+                            <span class="dress__tim-title" data-all="0" data-title="Выбор одежды">Выбор одежды</span>
+                        </div>
+                        <div class="dress__item">
+                            <img class="dress__img" src="/img/__calc/dress/1.jpg" alt="#">
+                            <div class="dress__label" data-cash="53">Костюм женский</div>
+                        </div>
+                        <div class="dress__item">
+                            <img class="dress__img" src="/img/__calc/dress/2.jpg" alt="#">
+                            <div class="dress__label" data-cash="35">Обувь женская</div>
+                        </div>
+                        <div class="dress__item">
+                            <img class="dress__img" src="/img/__calc/dress/3.jpg" alt="#">
+                            <div class="dress__label" data-cash="46">Костюм мужской</div>
+                        </div>
+                        <div class="dress__item">
+                            <img class="dress__img" src="/img/__calc/dress/4.jpg" alt="#">
+                            <div class="dress__label" data-cash="37">Туфли мужские</div>
+                        </div>
+                    </div>
+                    <div class="more">добавить еще</div>
+
+
+
+
+
                     <div class="praice">Итого: 0</div>
                 </form>
 
@@ -174,19 +206,6 @@
                     <div class="shop-calc__title">
                         <span>Выбраные услуги и товары :</span>
                     </div>
-                    <!-- <div class="shop-calc__list">
-                        <div class="shop-calc__img-box">
-                            <img src="/img/__calc/coffin/3.jpg" alt="#">
-                        </div>
-                        <div class="shop-calc__info">
-                            <div class="shop-calc__text">Гроб лакированный</div>
-                            <div class="shop-calc__cash">стоимость: 420 byn</div>
-                        </div>
-                        <div class="shop-calc__delete">
-                            <img src="/img/__calc/delete_icon.png" alt="#">
-                        </div>
-                    </div> -->
-
                     
                 </div>
 
