--- a/calc.html
+++ b/calc.html
@@ -195,6 +195,27 @@
                     </div>
                     <div class="more">добавить еще</div>
 
+                    <!--= Крест -->
+                    <div class="title-coffin">Ваш выбор ритуального креста:</div>
+                    <div class="cross" data-total="">
+                        <div class="cross__tim">
+                            <img class="cross__img-tim" src="/img/__calc/cross/cross-icon.png" alt="#" data-img="/img/__calc/cross/cross-icon.png">
+                            <span class="cross__tim-title" data-all="0" data-title="Выбор креста">Выбор креста</span>
+                        </div>
+                        <div class="cross__item">
+                            <img class="cross__img" src="/img/__calc/dress/1.jpg" alt="#">
+                            <div class="cross__label" data-cash="37">Крест католический с молдингом</div>
+                        </div>
+                        <div class="cross__item">
+                            <img class="cross__img" src="/img/__calc/dress/2.jpg" alt="#">
+                            <div class="cross__label" data-cash="40">Крест православный с молдингом</div>
+                        </div>
+                        <div class="cross__item">
+                            <img class="cross__img" src="/img/__calc/dress/3.jpg" alt="#">
+                            <div class="cross__label" data-cash="35">Крест католический стандартный</div>
+                        </div>
+                    </div>
+
 
 
 
