--- a/calc.html
+++ b/calc.html
@@ -203,38 +203,38 @@
                             <span class="cross__tim-title" data-all="0" data-title="Выбор креста">Выбор креста</span>
                         </div>
                         <div class="cross__item">
-                            <img class="cross__img" src="/img/__calc/dress/1.jpg" alt="#">
+                            <img class="cross__img" src="/img/__calc/cross/1.jpg" alt="#">
                             <div class="cross__label" data-cash="37">Крест католический с молдингом</div>
                         </div>
                         <div class="cross__item">
-                            <img class="cross__img" src="/img/__calc/dress/2.jpg" alt="#">
+                            <img class="cross__img" src="/img/__calc/cross/2.jpg" alt="#">
                             <div class="cross__label" data-cash="40">Крест православный с молдингом</div>
                         </div>
                         <div class="cross__item">
-                            <img class="cross__img" src="/img/__calc/dress/3.jpg" alt="#">
+                            <img class="cross__img" src="/img/__calc/cross/3.jpg" alt="#">
                             <div class="cross__label" data-cash="35">Крест католический стандартный</div>
                         </div>
                     </div>
+                    <!--= Грузчики -->
+                    <div class="loader">
+                        <input type="checkbox" name="#" value="#">
+                        <label for="id как в input-text">Я подпись к полю</label>
+                    </div>
 
-
-
-
-
-                    <div class="praice">Итого: 0</div>
                 </form>
 
                 <div class="shop-calc">
                     <div class="shop-calc__title">
                         <span>Выбраные услуги и товары :</span>
                     </div>
-                    
                 </div>
-
             </div>
         </main>
 
+        <div class="padding"></div>
         <!--= footer -->
         <footer class="footer">
+            <div class="praice">Всего: 0</div>
             <div class="footer__item-img">
                 <picture>
                     <source srcset="img/footer/Logo-1.webp" type="image/webp">
