--- a/calc.html
+++ b/calc.html
@@ -216,9 +216,10 @@
                         </div>
                     </div>
                     <!--= Грузчики -->
+                    <div class="title-coffin">Похоронная бригада:</div>
                     <div class="loader">
-                        <input type="checkbox" name="#" value="#">
-                        <label for="id как в input-text">Я подпись к полю</label>
+                        <input class="loader__input" id="loader" type="checkbox" name="loader" value="80">
+                        <label class="loader__title stop" for="loader">Услуги грузчиков 4-чел для сопровождения похорон</label>
                     </div>
 
                 </form>
