--- a/calc.html
+++ b/calc.html
@@ -215,15 +215,16 @@
                             <div class="cross__label" data-cash="35">Крест католический стандартный</div>
                         </div>
                     </div>
+
                     <!--= Грузчики -->
                     <div class="title-coffin">Похоронная бригада:</div>
-                    <div class="loader">
+                    <div class="loader" data-praice="100" data-check-id="loader">
                         <input class="loader__input" id="loader" type="checkbox" name="loader" value="80">
                         <label class="loader__title stop" for="loader">Услуги грузчиков 4-чел для сопровождения похорон</label>
                     </div>
-
                 </form>
-
+                
+                <!--= Выбраные услуги и товары : -->
                 <div class="shop-calc">
                     <div class="shop-calc__title">
                         <span>Выбраные услуги и товары :</span>
