--- a/calc.html
+++ b/calc.html
@@ -219,11 +219,18 @@
                     <!--= Грузчики -->
                     <div class="title-coffin">Похоронная бригада:</div>
                     <div class="loader" data-praice="100" data-check-id="loader">
-                        <input class="loader__input" id="loader" type="checkbox" name="loader" value="80">
+                        <input class="loader__input" id="loader" type="checkbox" name="loader" value="100">
                         <label class="loader__title stop" for="loader">Услуги грузчиков 4-чел для сопровождения похорон</label>
                     </div>
+                    
+                    <!--= Товар -->
+                    <div class="title-coffin">Доставка товара:</div>
+                    <div class="delivery" data-praice="80" data-check-id="delivery">
+                        <input class="delivery__input" id="delivery" type="checkbox" name="delivery" value="80">
+                        <label class="delivery__title stop" for="delivery">Доставка гроба и товаров</label>
+                    </div>
                 </form>
-                
+
                 <!--= Выбраные услуги и товары : -->
                 <div class="shop-calc">
                     <div class="shop-calc__title">
