--- a/calc.html
+++ b/calc.html
@@ -123,6 +123,8 @@
             </div>
 
             <div class="calc">
+
+                <!--= Форма выбора -->
                 <form class="form" name="calc" action="#" method="get">
                     
                     <!--= Гробы -->
@@ -155,15 +157,15 @@
                         </div>
                         <div class="wreath__item">
                             <img class="wreath__img" src="/img/__calc/wreath/1.png" alt="#">
-                            <div class="wreath__label" data-cash="70">Венок ритуальный (1.7 метра)</div>
+                            <div class="wreath__label" data-cash="70">Венок ритуальный<br>(1.7 метра)</div>
                         </div>
                         <div class="wreath__item">
                             <img class="wreath__img" src="/img/__calc/wreath/2.png" alt="#">
-                            <div class="wreath__label" data-cash="50">Венок ритуальный (1.5 метра)</div>
+                            <div class="wreath__label" data-cash="50">Венок ритуальный<br>(1.5 метра)</div>
                         </div>
                         <div class="wreath__item">
                             <img class="wreath__img" src="/img/__calc/wreath/3.png" alt="#">
-                            <div class="wreath__label" data-cash="30">Венок ритуальный (1.3 метра)</div>
+                            <div class="wreath__label" data-cash="30">Венок ритуальный<br>(1.3 метра)</div>
                         </div>
                     </div>
                     <div class="more">добавить еще</div>
