--- a/index.html
+++ b/index.html
@@ -247,6 +247,19 @@
                     </div>
                 </div>
             </div>
+            <div class="calculator">
+                <div class="calculator__body">
+                    <div class="calculator__img">
+                        <img src="/img/__calc/calc-icon.png" alt="calc">
+                    </div>
+                    <div class="calculator__discription">
+                        <div class="calculator__title">Калькулятор услуг</div>
+                        <div class="calculator__sub-title">Вы можете самостоятельно сформировать нужный вам пакет, выбрав необходимые услуги в калькуляторе.</div>
+                        <a class="calculator__button" href="calc.html"><span>расчитать</span></a>
+                    </div>
+                </div>
+            </div>
+            
 
             <!-- Prais -->
             <div class="box-prais">
@@ -331,9 +344,22 @@
                     </div>
                 </div>
             </div>
-            </div> 
-
-    
+            </div>
+            <div class="music">
+                <div class="music__body">
+                    <div class="music__icon">
+                            <img src="/img/home/instrument-icon.png" alt="music">
+                    </div>
+                    <div class="music__info">
+                        <div class="music__title">Музыкальное сопровождение похорон (профессиональные музыканты)</div>
+                        <ul class="music__discription">
+                            <li class="music__line">-малый состав;</li>
+                            <li class="music__line">-расширенный состав.</li>
+                        </ul>
+                        <div class="music__text">Подробности  - по телефонам, указанным на сайте.</div>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <!--= footer -->
