--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/88857516" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHFXL31NRD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XHFXL31NRD');
+</script>
 </head>
 <body>
     <div class="wrapper">
