--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/88857516" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHFXL31NRD"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-230068034-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-XHFXL31NRD');
+  gtag('config', 'UA-230068034-1');
 </script>
 </head>
 <body>
